modificaciones menores en los html

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -39,9 +39,9 @@
                   Servicios
                 </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="../html/servicios.html">Estructuras</a>
-                    <a class="dropdown-item" href="../html/servicios.html">Hidraulica</a>
-                    <a class="dropdown-item" href="../html/servicios.html">Mensuras</a>
+                        <a class="dropdown-item" href="../html/estructuras.html">Estructuras</a>
+                        <a class="dropdown-item" href="../html/hidrologia.html">Hidraulica</a>
+                        <a class="dropdown-item" href="../html/mensuras.html">Mensuras</a>
                     </div>
             </div>
             <a href="trabajos.html">Nuestros trabajos</a>
