--- a/html/mensuras.html
+++ b/html/mensuras.html
@@ -41,9 +41,9 @@
                   Servicios
                 </a>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                    <a class="dropdown-item" href="../html/servicios.html">Estructuras</a>
-                    <a class="dropdown-item" href="../html/servicios.html">Hidraulica</a>
-                    <a class="dropdown-item" href="../html/servicios.html">Mensuras</a>
+                        <a class="dropdown-item" href="../html/estructuras.html">Estructuras</a>
+                        <a class="dropdown-item" href="../html/hidrologia.html">Hidraulica</a>
+                        <a class="dropdown-item" href="../html/mensuras.html">Mensuras</a>
                     </div>
             </div>
             <a href="trabajos.html">Nuestros trabajos</a>
@@ -65,7 +65,7 @@
             <div class="serviciosExtendido">
                 <section class="serviciosExtendido">
                     <div class="iconos">
-                        <h3>Cálculos estructurales</h3>
+                        <h3>Mensuras</h3>
                         <p>
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-building-bridge" width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffc107" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -78,10 +78,9 @@
                         </p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda voluptates mollitia harum at ea non reprehenderit similique consequuntur pariatur error quas, quae nam et placeat nostrum. Voluptate dolor quis veritatis.</p>
                     </div>
-                    <!-- Slideshow container -->
+                    <!-- Acá comienza el carousel -->
                     <div class="slideshow-container">
 
-                        <!-- Full-width images with number and caption text -->
                         <div class="mySlides fade">
                         <div class="numbertext">1 / 3</div>
                         <img src="../img/mensura1.jpg" style="width:100%">
@@ -95,13 +94,12 @@
                         </div>
 
                     
-                        <!-- Next and previous buttons -->
+                        <!-- los botones de siguiente y atrás, no están optimizados -->
                         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                         <a class="next" onclick="plusSlides(1)">&#10095;</a>
                     </div>
                     <br>
                     
-                    <!-- The dots/circles -->
                     <div style="text-align:center">
                         <span class="dot" onclick="currentSlide(1)"></span>
                         <span class="dot" onclick="currentSlide(2)"></span>
